test/spec_vectors/f64/fail/module_10.wat
(module (func (result f64) (f64.sqrt (i64.const 0))))